# HexCodeEmulator

./: .gitignore  BananaOS.cpp  BananaOS.h  CMakeLists.txt  FileAnalyzerFile.cpp  FileAnalyzerFile.h  LICENSE  Notes.txt  README.md  cpu.cpp  cpu.h  gpu.cpp  gpu.h  main  main.cpp  memory.cpp  memory.h  temp  temporary.cpp
.github/workflows/: build.yml  format.yml  release.yml
Emulator/: CMakeLists.txt  Makefile  README.md
Emulator/.github/workflows/: build.yml
Emulator/Source_Files/: Banana.cpp  Banana.h  cpu.cpp  gpu.cpp  main.cpp  memory.cpp
Emulator/hws/: hello_world1.slug  hello_world2.slug  hello_world3.slug
Emulator/tests/gpu/: README.md  box.slug  image.slug  input.slug
Source_Files/: Banana.cpp  Banana.h  BananaOS.cpp  BananaOS.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  main.cpp  memory.cpp  memory.h
docs/: Makefile  Markdown_Report.md
files/: Makefile  hello.cpp
tests/: README.md  run_all_HW_tests.sh  run_test.sh
tests/gpu/: README.md
tests/hello_world2/: 1.out
tests/hello_world3/: 0.in  1.out  2.out
